--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -2,25 +2,40 @@
 
 $wrap-border: solid #000;
 
+img{
+  height: 100%;
+  width: 100%;
+}
 main {
   box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
-  height: 300px;
+  height: 500px;
   align-items: stretch;
 }
 
 .row1 {
   border: $wrap-border;
   width: calc(100%/3);
+  height: calc(100%/3;
 }
 
 .row2 {
   border: $wrap-border;
   width: calc(100%/3);
+  height: calc(100%/3;
 }
 
 .row3 {
   border: $wrap-border;
   width: calc(100%/3);
+  height: calc(100%/3;
+}
+
+main div:hover {
+  background-color: lighten(black, 95%);
+}
+
+.hidden {
+  visibility: hidden;
 }
