--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,41 +1,97 @@
 @import '~bootstrap/scss/bootstrap';
 
-$wrap-border: solid #000;
+$wrap-around: solid #000;
 
-img{
-  height: 100%;
-  width: 100%;
+// img{
+//   height: 100%;
+//   width: 100%;
+// }
+// .hide {
+//   opacity: 0;
+// }
+// .show {
+//   opacity: 1;
+// }
+body {
+background-image: url('../../public/background.jpg');
+background-size: cover;
 }
+
+h1 {
+  font-family: 'Permanent Marker', cursive;
+  font-size: 50px;
+  font-weight: 1200;
+  padding: 10px;
+  padding-left: 20px;
+}
+// .second {
+//   visibility: hidden;
+// }
+
 main {
   box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
-  height: 500px;
-  align-items: stretch;
+  height: 60vh;
+  align-items: center;
+  padding: 20px 20px;
+}
+
+nav {
+  display: flex;
+  font-family: 'Noticia Text', serif;
+  font-size: 15px;
+  font-weight: 1000;
+}
+
+
+h2 {
+  padding: 50px 20px;
+  // border: solid black;
+  display: flex;
+  justify-content: center;
+  // align-items: flex-end;
+  font-family: 'Permanent Marker', cursive;
+}
+
+.float-left {
+  float: left;
+  padding-left: 15px;
+}
+
+.float-right {
+  float: right;
+  padding-right: 20px;
+}
+
+div {
+  font-family: 'Permanent Marker', cursive;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: rgba(255, 255, 255, 1);
 }
 
 .row1 {
-  border: $wrap-border;
+  border: $wrap-around;
   width: calc(100%/3);
   height: calc(100%/3;
 }
 
 .row2 {
-  border: $wrap-border;
+  border: $wrap-around;
   width: calc(100%/3);
   height: calc(100%/3;
 }
 
 .row3 {
-  border: $wrap-border;
+  border: $wrap-around;
   width: calc(100%/3);
   height: calc(100%/3;
 }
 
 main div:hover {
-  background-color: lighten(black, 95%);
-}
-
-.hidden {
-  visibility: hidden;
+  background-color: rgba(0, 0, 0, 0.5);
 }
