--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -40,10 +40,12 @@ main {
 nav {
   display: flex;
   font-family: 'Noticia Text', serif;
+  border: solid black;
   font-size: 15px;
   font-weight: 1000;
+  padding: 10px 25px;
+  align-items: stretch;
 }
-
 
 h2 {
   padding: 50px 20px;
@@ -56,12 +58,18 @@ h2 {
 
 .float-left {
   float: left;
-  padding-left: 15px;
+  padding-left: 10px;
+  padding-right: 10vh;
+  // display: flex;
+  // align-items: flex-end;
 }
 
 .float-right {
   float: right;
-  padding-right: 20px;
+  padding-right: 10px;
+  // display: flex;
+  // align-items: flex-end;
+
 }
 
 div {
@@ -70,7 +78,7 @@ div {
   align-items: center;
   justify-content: center;
   font-size: 15vh;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.45);
   color: rgba(255, 255, 255, 1);
 }
 
@@ -93,5 +101,5 @@ div {
 }
 
 main div:hover {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.3);
 }
