--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -40,7 +40,7 @@ main {
 nav {
   display: flex;
   font-family: 'Noticia Text', serif;
-  border: solid black;
+  // border: solid black;
   font-size: 15px;
   font-weight: 1000;
   padding: 10px 25px;
