--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -13,8 +13,8 @@ $wrap-around: solid #000;
 //   opacity: 1;
 // }
 body {
-background-image: url('../../public/background.jpg');
-background-size: cover;
+  background-image: url('../../public/background.jpg');
+  background-size: cover;
 }
 
 h1 {
@@ -27,7 +27,11 @@ h1 {
 // .second {
 //   visibility: hidden;
 // }
+p {
+  padding-left: 25px;
+  font-family: 'Inter', sans-serif;
 
+}
 main {
   box-sizing: border-box;
   display: flex;
@@ -102,4 +106,12 @@ div {
 
 main div:hover {
   background-color: rgba(0, 0, 0, 0.3);
+}
+
+}
+.failure {
+  color: #ff0000;
+}
+.success {
+  color: #00ff00;
 }
