--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -13,7 +13,8 @@ $wrap-around: solid #000;
 //   opacity: 1;
 // }
 body {
-  background-image: url('../../public/background.jpg');
+  // background-image: url('../../public/background.jpg');
+  background-image: url('https://github.com/TN-space/tictactoe-ThanhNguyen/tree/master/public/background.jpg')
   background-size: cover;
 }
 
