7th commit check 3 - image still

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -13,7 +13,7 @@ $wrap-around: solid #000;
 //   opacity: 1;
 // }
 body {
-  background-image: url('../../public/images/background.jpg');
+  background-image: url('./public/images/background.jpg');
   // background-image: url('https://github.com/TN-space/tictactoe-ThanhNguyen/tree/master/public/background.jpg')
   background-size: cover;
 }
